# charon

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  KeybindManager.tsx  Preferences.tsx  constants.ts  index.tsx  keyboard-manager.tsx  store.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: badge.rs  color.rs  commands.rs  config.rs  data.rs  emoji.rs  emote.rs  lib.rs  main.rs  payload.rs  shared.rs
src-tauri/src/apis/: adamcy.rs  ffz.rs  helix.rs  mod.rs  recent_messages.rs
src-tauri/src/static/: twitch_auth_local_website.html
src/components/: AuthModal.tsx  ChatMessage.tsx  Chatroom.tsx  EmoteHinter.tsx  JoinChannelModal.tsx  MessageInput.tsx  Tab.tsx  TabLayoutDraggable.tsx
src/components/messages/: Badge.tsx  Privmsg.tsx  Sysmsg.tsx  Usernotice.tsx
src/windows/: Main.tsx  Preferences.tsx
