[package]
name = "charon"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "fs-all", "path-all", "dialog-all", "window-close", "shell-open"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twitch-irc = "5.0.1"
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
directories = "5.0.1"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitch_api = {version = "0.7.0-rc.7", features = ["reqwest", "helix", "tracing"] }
reqwest = { version = "0.11.26", features = ["json"] }
fontdb = "0.16.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
